MGMIDN-734: Fix bugs for create and update question functions
Merge in DA-NANG-INTERNSHIP/easy-quizy-be from bugfix/MGMIDN-734-view-details-edit-delete-create-the-questions to develop

Squashed commit of the following:

commit de0a0a9068811193951045fdfadbadc77d63feec
Author: tranthuyvan <tranthuyvan2105@gmail.com>
Date:   Mon Jul 3 17:12:08 2023 +0700

    MGMIDN-734: Fix bugs for createQuestion and updateQuestion functions

commit 023b9ad34a43e7af16dbc63a6cec9372ad42bd34
Author: tranthuyvan <tranthuyvan2105@gmail.com>
Date:   Mon Jul 3 17:08:53 2023 +0700

    MGMIDN-734: Fix bugs for createQuestion and updateQuestion functions

commit 2666fa615f9359f0f895c728d074b663e2713943
Author: tranthuyvan <tranthuyvan2105@gmail.com>
Date:   Mon Jul 3 16:54:09 2023 +0700

    MGMIDN-734: Fix bugs for createQuestion and updateQuestion functions

commit 4adc72f6db87c0b132c783ae9787674c48cb7cd6
Author: tranthuyvan <tranthuyvan2105@gmail.com>
Date:   Mon Jul 3 11:40:29 2023 +0700

    MGMIDN-734: Fix bugs for createQuestion and updateQuestion functions