@@ -3,13 +3,17 @@ package com.mgmtp.easyquizy.service;
 import com.mgmtp.easyquizy.dto.AnswerDTO;
 import com.mgmtp.easyquizy.dto.QuestionDTO;
 import com.mgmtp.easyquizy.dto.QuestionListViewDTO;
+import com.mgmtp.easyquizy.exception.InvalidFieldsException;
 import com.mgmtp.easyquizy.exception.RecordNotFoundException;
 import com.mgmtp.easyquizy.mapper.AnswerMapper;
 import com.mgmtp.easyquizy.mapper.QuestionMapper;
 import com.mgmtp.easyquizy.model.answer.AnswerEntity;
+import com.mgmtp.easyquizy.model.category.CategoryEntity;
 import com.mgmtp.easyquizy.model.question.Difficulty;
 import com.mgmtp.easyquizy.model.question.QuestionEntity;
 import com.mgmtp.easyquizy.repository.AnswerRepository;
+import com.mgmtp.easyquizy.repository.AttachmentRepository;
+import com.mgmtp.easyquizy.repository.CategoryRepository;
 import com.mgmtp.easyquizy.repository.QuestionRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -23,7 +27,6 @@ import org.springframework.util.StringUtils;
 import javax.persistence.criteria.Predicate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class QuestionServiceImpl implements QuestionService {
@@ -31,6 +34,10 @@ public class QuestionServiceImpl implements QuestionService {
     private QuestionRepository questionRepository;
     @Autowired
     private AnswerRepository answerRepository;
+    @Autowired
+    private CategoryRepository categoryRepository;
+    @Autowired
+    private AttachmentRepository attachmentRepository;
     @Autowired
     private QuestionMapper questionMapper;
     @Autowired
@@ -46,13 +53,16 @@ public class QuestionServiceImpl implements QuestionService {
     @Override
     @Transactional
     public QuestionDTO createQuestion(QuestionDTO questionDTO) throws RecordNotFoundException {
+        CategoryEntity category = getCategoryById(questionDTO.getCategory().getId());
+
         List<AnswerDTO> answerDTOs = questionDTO.getAnswers();
 
         List<AnswerEntity> answers = answerDTOs.stream()
                 .map(answerMapper::answerDTOtoAnswer)
-                .collect(Collectors.toList());
+                .toList();
 
         QuestionEntity question = questionMapper.questionDTOToQuestion(questionDTO);
+        question.setCategory(category);
 
         question.setAnswers(answers);
 
@@ -63,12 +73,27 @@ public class QuestionServiceImpl implements QuestionService {
 
     @Override
     @Transactional
-    public QuestionDTO updateQuestion(QuestionDTO questionDTO) throws RecordNotFoundException {
+    public QuestionDTO updateQuestion(QuestionDTO questionDTO) throws RecordNotFoundException, InvalidFieldsException {
         if (questionDTO.getId() == null) {
-            throw new IllegalArgumentException("Question ID is required");
+            InvalidFieldsException.FieldError idError = new InvalidFieldsException.FieldError("id", "This field is required");
+            throw new InvalidFieldsException(List.of(idError));
         }
 
+        QuestionEntity existingQuestion = questionRepository.findById(questionDTO.getId()).orElseThrow(() ->
+                new RecordNotFoundException("No Question record exists for the given id: " + questionDTO.getId()));
+
+        if (questionDTO.getAttachment() != null) {
+            questionDTO.getAttachment().setId(null);
+        }
+
+        if (existingQuestion.getAttachment() != null) {
+            attachmentRepository.deleteById(existingQuestion.getAttachment().getId());
+        }
+
+        CategoryEntity category = getCategoryById(questionDTO.getCategory().getId());
+
         QuestionEntity question = questionMapper.questionDTOToQuestion(questionDTO);
+        question.setCategory(category);
 
         answerRepository.deleteByQuestionId(questionDTO.getId());
 
@@ -88,7 +113,7 @@ public class QuestionServiceImpl implements QuestionService {
     @Override
     @Transactional
     public void deleteQuestionById(Long id) throws RecordNotFoundException {
-        if (questionRepository.existsById(id)){
+        if (questionRepository.existsById(id)) {
             questionRepository.deleteById(id);
         } else {
             throw new RecordNotFoundException("No Question record exists for the given id: " + id);
@@ -118,5 +143,10 @@ public class QuestionServiceImpl implements QuestionService {
 
         Page<QuestionEntity> page = questionRepository.findAll(filterSpec, pageable);
         return page.map(questionMapper::questionToQuestionListViewDTO);
+    }
+
+    private CategoryEntity getCategoryById(Long id) throws RecordNotFoundException {
+        return categoryRepository.findById(id)
+                .orElseThrow(() -> new RecordNotFoundException("No category record exists!!!"));
     }
 }
